# conan_template

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: main.cpp  myapp.cpp  myapp.h
